<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView android:id="@+id/search_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_message"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/search_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1">
        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/city_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/city_input_hint"
            android:inputType="text"
            android:imeOptions="actionSearch" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup android:id="@+id/unit_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/city_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/city_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.05"
        android:checkedButton="@id/unit_celsius">
        <RadioButton
            android:id="@+id/unit_celsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsius" />

        <RadioButton
            android:id="@+id/unit_fahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit" />
    </RadioGroup>

    <Button android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textAllCaps="true"
        android:textColor="#FFF"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/unit_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1" />


</androidx.constraintlayout.widget.ConstraintLayout>